the one that fixes alignment issues when card text is across several lines (#1396)
* initial about container added

* fixes alignment issue for cards

* oops, didn't branch from develop

--- a/components/vf-card/vf-card.scss
+++ b/components/vf-card/vf-card.scss
@@ -15,6 +15,7 @@
   --card-text-color: var(--vf-card-theme-color--foreground, #{ui-color(black)});
   --card-background-color: var(--vf-card-theme-color--background , #{ui-color(white)});
 
+  align-items: start;
   background-color: var(--card-background-color);
   /* border: 1px solid var(--vf-card-theme-color--border, var(--card-border-color, #{set-color(vf-grey--lightest)})); */
   box-shadow: 0 .125rem .25rem rgba(color(grey--dark), .5);
